Class 5 form design

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
         <title>Class-5(i)</title>
     </head>
     <body>
-        <marquee><h1>welcome to my website</h1></marquee>
+        <marquee><h1>You're cordially welcomed in our website!</h1></marquee>
 
-        <a href="https://www.facebook.com/groups/1015065243445169/?multi_permalinks=1056611429290550&notif_id=1728930177507282&notif_t=group_activity&ref=notif" target="_blank">Click here</a>
+        <img src="web.jpg" height="300", width="500"> &nbsp &nbsp &nbsp
 
+        <a href="https://www.facebook.com/groups/1015065243445169/?multi_permalinks=1056611429290550&notif_id=1728930177507282&notif_t=group_activity&ref=notif" target="_blank">Click here for facebook</a>&nbsp 
+        &nbsp 
+
+        <a href="https://webcoder-it.com/" target="_blank">Click here for website login</a> &nbsp &nbsp &nbsp
         <a href="contact.html">Contact us</a>
     </body>
 </html>
